[project]
name = "iv-influence-distribution-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "adbc-driver-manager==1.5.0",
    "adbc-driver-sqlite==1.5.0",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "appnope==0.1.4",
    "asciichartpy==1.5.25",
    "asn1crypto==1.5.1",
    "asttokens==3.0.0",
    "async-cache==1.1.1",
    "atpublic==5.1",
    "attrs==25.3.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.3",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "bokeh==3.6.3",
    "bottleneck==1.4.2",
    "cachetools==5.5.2",
    "ccy==1.7.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorcet==3.1.0",
    "comm==0.2.2",
    "commonmark==0.9.1",
    "connectorx==0.4.2",
    "contourpy==1.3.1",
    "cryptography==44.0.2",
    "cycler==0.12.1",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "deltalake==0.24.0",
    "dotenv==0.9.9",
    "et-xmlfile==2.0.0",
    "executing==2.2.0",
    "faicons==0.2.2",
    "fastexcel==0.13.0",
    "filelock==3.18.0",
    "financepy==0.370",
    "financetoolkit==2.0.1",
    "fonttools==4.56.0",
    "frozendict==2.4.6",
    "fsspec==2025.3.0",
    "gevent==24.11.1",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "great-tables==0.17.0",
    "greenlet==3.1.1",
    "holidays==0.63",
    "holoviews==1.20.2",
    "html5lib==1.1",
    "htmltools==0.6.0",
    "hvplot==0.11.2",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "importlib-resources==6.5.2",
    "ipykernel==6.29.5",
    "ipython==9.0.2",
    "ipython-pygments-lexers==1.1.1",
    "jax==0.5.2",
    "jaxlib==0.5.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.8",
    "linkify-it-py==2.0.3",
    "llvmlite==0.44.0",
    "lxml==5.3.1",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mdit-py-plugins==0.4.2",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.1",
    "mmh3==5.1.0",
    "multitasking==0.0.11",
    "narwhals==1.31.0",
    "nest-asyncio==1.6.0",
    "numba==0.61.0",
    "numexpr==2.10.2",
    "numpy==2.1.3",
    "numpyro>=0.18.0",
    "odfpy==1.4.1",
    "openpyxl==3.1.5",
    "opt-einsum==3.4.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "panel==1.6.1",
    "param==2.2.0",
    "parso==0.8.4",
    "peewee==3.17.9",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "plotly==6.0.1",
    "polars==1.25.2",
    "prettytable==3.15.1",
    "prompt-toolkit==3.0.50",
    "protobuf==5.29.3",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-lets-be-rational==1.0.1",
    "py-vollib==1.0.1",
    "py-vollib-vectorized==0.1.1",
    "pyarrow==19.0.1",
    "pyblackscholesanalytics==0.0.2",
    "pycountry==24.6.1",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydeck==0.9.1",
    "pygments==2.19.1",
    "pyiceberg==0.9.0",
    "pyjwt==2.10.1",
    "pyopenssl==25.0.0",
    "pyparsing==3.2.1",
    "python-calamine==0.3.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "pyviz-comms==3.0.4",
    "pyxlsb==1.0.10",
    "pyyaml==6.0.2",
    "pyzmq==26.3.0",
    "qfin==0.1.24",
    "quantflow==0.3.1",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.23.1",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "setuptools==76.1.0",
    "simplejson==3.20.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "snowflake==1.1.0",
    "snowflake-connector-python==3.14.0",
    "snowflake-core==1.1.0",
    "snowflake-legacy==1.0.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "sqlalchemy==2.0.39",
    "stack-data==0.6.3",
    "streamlit==1.43.2",
    "strictyaml==1.7.3",
    "tenacity==9.0.0",
    "threadpoolctl==3.6.0",
    "toml==0.10.2",
    "tomlkit==0.13.2",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "uc-micro-py==1.0.3",
    "urllib3==2.3.0",
    "volvisdata==1.0.3",
    "volvisualizer==1.2.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "xarray==2025.1.2",
    "xlrd==2.0.1",
    "xlsx2csv==0.8.4",
    "xlsxwriter==3.2.2",
    "xyzservices==2025.1.0",
    "yfinance==0.2.54",
    "zipp==3.21.0",
    "zope-event==5.0",
    "zope-interface==7.2",
]
